--- a/snakedenfitness/templates/base.html
+++ b/snakedenfitness/templates/base.html
@@ -21,7 +21,7 @@
 
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">
-                    <i class="bi bi-person" style="color: white;"> Account </i>
+                    <i class="bi bi-person text-light"> Account </i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 
