--- a/snakedenfitness/users/templates/users/profile.html
+++ b/snakedenfitness/users/templates/users/profile.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block body %}
     <h1>Welcome {{ user.username }}</h1>
+    <img src="{% static 'A_Brief_History_of_Time.jpg' %}" alt="Profile Image" width="250" height="250"/>
     <ul>
         <li>Name: {{ user.get_full_name }}</li>
         <li>Birth Date: {{ user.profile.birth_date }}</li>
