--- a/snakedenfitness/users/templates/users/profile.html
+++ b/snakedenfitness/users/templates/users/profile.html
@@ -3,7 +3,7 @@
 
 {% block body %}
     <h1>Welcome {{ user.username }}</h1>
-    <img src="{% static 'A_Brief_History_of_Time.jpg' %}" alt="Profile Image" width="250" height="250"/>
+    <img src="{% static profile_avatar %}" alt="Profile Image" width="150" height="150"/>
     <ul>
         <li>Name: {{ user.get_full_name }}</li>
         <li>Birth Date: {{ user.profile.birth_date }}</li>
