--- a/snakedenfitness/fitness/templates/fitness/fitness_home.html
+++ b/snakedenfitness/fitness/templates/fitness/fitness_home.html
@@ -38,5 +38,31 @@
             </div>
         <br><br>
     {% endfor %}
+
+            <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'My Workout Summary'],
+          ['Reps',      2],
+          ['Sets',  2],
+          ['Weight', 2 ],
+        ]);
+
+        var options = {
+          title: 'My Workout Summary'
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+        chart.draw(data, options);
+      }
+    </script>
+     <div id="piechart" style="width: 900px; height: 500px; padding: 25px;"></div>
+</div>
 </div>
 {% endblock %}
