--- a/snakedenfitness/templates/index.html
+++ b/snakedenfitness/templates/index.html
@@ -3,5 +3,5 @@
 <!-- This is the site landing page -->
 
 {% block body %}
- <h1>Welcome to the Snakeden</h1>
+ <h1 class="contianer text-center mt-5">Welcome to the Snakeden</h1>
 {% endblock %}
