--- a/snakedenfitness/templates/login.html
+++ b/snakedenfitness/templates/login.html
@@ -14,7 +14,7 @@
         </form>
     </section>
     <section class="row mt-2">
-        <p>Don't have an account? Go ahead and <a href="{% url 'register' %}" id="id_register">register</a>!</p>
+        <p>Don't have an account? Register <a href="{% url 'register' %}" id="id_register">here</a>!</p>
     </section>
 </main>
 {% endblock %}
