--- a/snakedenfitness/fitness/templates/fitness/add_client_form.html
+++ b/snakedenfitness/fitness/templates/fitness/add_client_form.html
@@ -7,9 +7,12 @@
     <form method="POST">
         {% csrf_token %}
         {{form|crispy}}
-{% comment %}
+
+
+        {% comment %}
         {{form.client}}
-        {{form.trainer}} {% endcomment %}
+        {{form.trainer}}
+        {% endcomment %}
 
         <button class="btn btn-primary" style="margin-left: 100px; margin-top: 30px" type="submit">Confirm</button>
     </form>
@@ -27,5 +30,5 @@
         <p> ______________________________________________________________</p>
     {% endfor %}
 
-    {% endblock %}
 </div>
+{% endblock %}
