--- a/snakedenfitness/fitness/templates/fitness/trainer_home.html
+++ b/snakedenfitness/fitness/templates/fitness/trainer_home.html
@@ -10,30 +10,32 @@
 
 <div class="container p-0" style="margin-left: 375px">
 
-<div class="row pb-1" style="text-align: center">
-        <div class="col-md-6 text-center h4" >
-            My Clients
-        </div>
-        <div class="col-md-3 text-center h4">
-            Client Requests
-        </div>
-</div>
+    <div class="row pb-1" style="text-align: center">
+            <div class="col-md-6 text-center h4" >
+                My Clients
+            </div>
+            <div class="col-md-3 text-center h4">
+                Client Requests
+            </div>
+    </div>
 
 
-<div class="row pb-1">
-        <div class="col-md-6 text-center h6" style=" margin-top: 20px">
-            Joe Johnson
-            <button class="btn btn-warning" style="color: white; margin-left: 20px;" type="submit">View</button>
-        </div>
+    {% comment %} <div class="row pb-1">
+            <div class="col-md-6 text-center h6" style=" margin-top: 20px">
+                Joe Johnson
+                <button class="btn btn-warning" style="color: white; margin-left: 20px;" type="submit">View</button>
+            </div>
 
-        <div class="col-md-3 text-center h6" style=" margin-top: 20px">
-            John Joseph
-            <a href="{% url 'groups' %}">
-            <button class="btn btn-success" style="color: white; margin-left: 20px;" type="submit">Accept</button>
-            <button class="btn btn-danger" style="color: white; margin-left: 10px;" type="submit">Decline</button>
-            </a>
-        </div>
-</div>
+            <div class="col-md-3 text-center h6" style=" margin-top: 20px">
+                John Joseph
+                <a href="{% url 'groups' %}">
+                <button class="btn btn-success" style="color: white; margin-left: 20px;" type="submit">Accept</button>
+                <button class="btn btn-danger" style="color: white; margin-left: 10px;" type="submit">Decline</button>
+                </a>
+            </div>
+    </div> {% endcomment %}
+
+
 </div>
 </div>
 <div class="container p-0">
