--- a/snakedenfitness/fitness/templates/fitness/workout_form.html
+++ b/snakedenfitness/fitness/templates/fitness/workout_form.html
@@ -3,7 +3,7 @@
 {% block body %}
  <div class="container p-0" style="margin-top: 25px; max-width: 25%;">
         <h1 style="text-align: center">Enter Workout Information</h1>
-        <form action="/fitness/workout_form/" method="post" style="margin-top: 25px">
+        <form class="mt-3" action="/fitness/workout_form/" method="post">
             {% csrf_token %}
             {{ form.as_p }}
 
