--- a/snakedenfitness/templates/base.html
+++ b/snakedenfitness/templates/base.html
@@ -74,16 +74,18 @@
         {% endfor %}
     {% endif %}
 
-    {% block title %}
-    {% endblock %}
+    <div class="container bg-light">
+        {% block title %}
+        {% endblock %}
 
-    {% block body %}
-    {% endblock %}
+        {% block body %}
+        {% endblock %}
 
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
 
-    {% block scripts %}
-    {% endblock %}
+        {% block scripts %}
+        {% endblock %}
+    </div>
 </body>
 </html>
