--- a/snakedenfitness/templates/base.html
+++ b/snakedenfitness/templates/base.html
@@ -19,7 +19,12 @@
                 {% elif user.profile.role == 1 %}
                     <a href="{% url 'dietitian_home' %}" class="nav-item nav-link"> Dietician Home </a>
                 {% else %}
-                    <a href="{% url 'rooms' %}" class="nav-item nav-link">Community</a>
+                    <div class="dropdown">
+                        <button class="btn btn-dark dropdown-toggle text-light" type="button" id="dropdownMenuButton" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">Community</button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a href="{% url 'rooms' %}" class="dropdown-item">Community</a>
+                        </div>
+                    </div>
 
                     <div class="dropdown">
                         <button class="btn btn-dark dropdown-toggle text-light" type="button" id="dropdownMenuButton" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">Fitness</button>
