--- a/snakedenfitness/templates/base.html
+++ b/snakedenfitness/templates/base.html
@@ -23,6 +23,7 @@
                         <button class="btn btn-dark dropdown-toggle text-light" type="button" id="dropdownMenuButton" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">Community</button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a href="{% url 'rooms' %}" class="dropdown-item">Community</a>
+                            <a href="{% url 'guides' %}" class="dropdown-item">Guides</a>
                         </div>
                     </div>
 
