--- a/snakedenfitness/community/templates/community/guides.html
+++ b/snakedenfitness/community/templates/community/guides.html
@@ -1,20 +1,40 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <h1 class="text-center mt-5">Diet</h1>
+    <h1 class="text-center mt-5">Guides</h1>
     <div class="container p-0">
-        <h4 class="text-center mt-2">Upload your workout guides and recipes here!</h4>
+        <h5 class="text-center mt-2">Post your workout guides, recipes, motivational quotes, etc here!</h5>
 
-          <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            <input type="file" name="myfile">
-            <button type="submit">Upload</button>
-          </form>
+                <form class="text-center mt-2" method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <table class="text-center mt-2" style="margin-left: 500px;">
+                       {{ form.as_table }}
+                    </table>
+                    <input type="submit" class="btn btn-primary">
+</form>
+          <p class="text-center mt-5" type="submit"><a href="{% url 'displayGuides' %}">View Posted Guides</a></p>
+          <p class="text-center mt-3"><a href="{% url 'rooms' %}">Return to home</a></p>
 
-          {% if uploaded_file_url %}
-            <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
-          {% endif %}
-
-          <p><a href="{% url 'rooms' %}">Return to home</a></p>
     </div>
+
+
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Make Profile</title>
+    </head>
+    <body>
+        <center>
+            <div class="jumbotron">
+                <hr class="my-4">
+
+            </div>
+        </center>
+    </body>
+</html>
 {% endblock %}
+
+
+
