--- a/snakedenfitness/community/templates/community/displayGuides.html
+++ b/snakedenfitness/community/templates/community/displayGuides.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block body %}
     <h1 class="text-center mt-5">Display Guides</h1>
     <div class="container p-0">
@@ -7,9 +7,10 @@
         <div class="jumbotron">
               <p class="lead">View posted material here!</p>
               <hr class="my-4">
-              <img src="{{ user_pr.Upload.url }}" class="image_responsive" height="100px" width="100px">
+              <img src="{% static user_pr.Upload.url %}" class="image_responsive" height="100px" width="100px">
               <p>
-                {{ user_pr.Upload.url }}<BR>
+                {% static user_pr.Upload.url %}
+<BR>
 
               <p class="text-center mt-3"><a href="{% url 'rooms' %}">Return to home</a></p>
         </div>
