--- a/snakedenfitness/community/templates/community/displayGuides.html
+++ b/snakedenfitness/community/templates/community/displayGuides.html
@@ -4,16 +4,15 @@
     <h1 class="text-center mt-5">Display Guides</h1>
     <div class="container p-0">
         <CENTER>
-        <div class="jumbotron">
-              <p class="lead">View posted material here!</p>
-              <hr class="my-4">
-              <img src="{% static user_pr.Upload.url %}" class="image_responsive" height="100px" width="100px">
-              <p>
-                {% static user_pr.Upload.url %}
-<BR>
-
-              <p class="text-center mt-3"><a href="{% url 'rooms' %}">Return to home</a></p>
-        </div>
+            <div class="jumbotron">
+                <p class="lead">View posted material here!</p>
+                <hr class="my-4">
+                <img src="{% static user_pr %}" class="image_responsive" height="100px" width="100px">
+                <p>
+                    {% static user_pr %}
+                    <BR>
+                <p class="text-center mt-3"><a href="{% url 'rooms' %}">Return to home</a></p>
+            </div>
         </CENTER>
     </div>
 {% endblock %}
