--- a/snakedenfitness/diet/templates/diet/dietitian_home.html
+++ b/snakedenfitness/diet/templates/diet/dietitian_home.html
@@ -29,7 +29,7 @@
 
         <div class="col-md-3 text-center h6" style=" margin-top: 20px">
             John Joseph
-            <a href="{% url 'groups' %}">
+            {#<a href="{% url 'groups' %}">#}
             <button class="btn btn-success" style="color: white; margin-left: 20px;" type="submit">Accept</button>
             <button class="btn btn-danger" style="color: white; margin-left: 10px;" type="submit">Decline</button>
             </a>
