--- a/snakedenfitness/community/templates/community/groupForm.html
+++ b/snakedenfitness/community/templates/community/groupForm.html
@@ -5,13 +5,22 @@
     <form method="POST">
         {% csrf_token %}
 
-        <label for="group_name" class="pt-1">Group Name:</label>
-        <input type="text" class="" id="group_name" name="group_name">
+        <!-- <div class="mb-3 mt-3">
+            <label for="group_name" class="pt-1">Group Name:</label>
+            <input type="text" class="" id="group_name" name="group_name">
+        </div> -->
+
+        <div class="mb-3 row pt-3">
+            <label for="group-name" class="col-sm-2 col-form-label">Group Name:</label>
+            <div class="col-sm-8">
+                <input type="text" name="group_name" id="group_name">
+            </div>
+        </div>
 
 <!--        <label for="group_description" class="pt-1">Group Description:</label>-->
 <!--        <textarea class="" id="group_description" name="group_description"></textarea>-->
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary mb-3">Submit</button>
     </form>
 </div>
 {% endblock %}
