--- a/snakedenfitness/diet/templates/diet/update_dietician.html
+++ b/snakedenfitness/diet/templates/diet/update_dietician.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 <div class="container py-5" style="max-width: 50%;" >
-    <h1>Add Dietitian</h1>
+    <h1>Change Dietitian</h1>
     <form method="POST">
         {% csrf_token %}
         {{form|crispy}}
