--- a/snakedenfitness/templates/base.html
+++ b/snakedenfitness/templates/base.html
@@ -44,9 +44,6 @@
                             <a href="{% url 'meal_form' %}" class="dropdown-item "> Log new meal </a>
                         </div>
                     </div>
-
-
-
                     {% endif %}
             {% endif %}
 
@@ -55,7 +52,7 @@
             <!-- <a href="{% url 'register' %}" class="nav-item nav-link"><i class="bi bi-person" style="color: white;"> Account </i></a> -->
 
             <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">
+                <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">
                     <i class="bi bi-person text-light"> Account </i>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
