--- a/snakedenfitness/fitness/templates/fitness/fitness_home.html
+++ b/snakedenfitness/fitness/templates/fitness/fitness_home.html
@@ -2,13 +2,28 @@
 
 {% block body %}
     <h1 class="text-center mt-5">Fitness</h1>
-    {% comment %} <div class="container p-0">
+
+    <div class="container p-0">
         <div class="row pb-1">
             <div class="col-md-12 h6">
-                <a href="{% url 'workout_form' %}"><button class="btn btn-success text-light" type="submit">New</button></a>
-                <a href="{% url 'request_trainer' %}"><button class="btn btn-info text-light" type="submit">Request Trainer</button></a>
+                <button class="btn btn-success" type="">Record New Workout</button>
+
+                {% if CTtable%}
+                    <a class="btn btn-info text-light" href="{% url 'update_client_form' %}">Change Trainer</a>
+                    <h6 class="d-inline btn justify-content-end bg-light">
+                        {% for trainer in CTtable %}
+                            Your trainer is <b>{{ trainer.trainer }}</b>
+                        {% endfor %}
+                    </h6>
+                {% else %}
+                    <a class="btn btn-info text-light" href="{% url 'add_client_form' %}">Request Trainer</a>
+                {% endif %}
             </div>
         </div>
+    </div>
+
+   <div class="container p-0">
+
         {% for workout in workout %}
             <div class="card">
               <div class="card-header">
@@ -33,28 +48,5 @@
             </div>
         <br><br>
         {% endfor %}
-    </div> {% endcomment %}
-
-<div class="container p-0">
-    <div class="row pb-3">
-        <div class="col-md-4 text-center h6">
-            <button class="btn btn-success" type="">New</button>
-            {% comment %} <a class="btn btn-info" href="{% url 'add_client_form' %}">Request Trainer</a> {% endcomment %}
-            {% comment %} <a href="{% url 'add_client_form' %}" class="nav-item"> Request </a> {% endcomment %}
-
-            {% if CTtable%}
-
-                <a class="btn btn-success" href="{% url 'update_client_form' %}">Change Trainer</a>
-            {% else %}
-                <a class="btn btn-success" href="{% url 'add_client_form' %}">Request Trainer</a>
-            {% endif %}
-
-            {% for trainer in CTtable %}
-                <h3> Your trainer is <b>{{ trainer.trainer }}</b> </h3>
-            {% endfor %}
-
-
-        </div>
-        <div class="col-md-8"></div>
     </div>
 {% endblock %}
