--- a/snakedenfitness/fitness/templates/fitness/trainer_home.html
+++ b/snakedenfitness/fitness/templates/fitness/trainer_home.html
@@ -13,9 +13,9 @@
             <div class="col-md-6 text-center h4" >
                 My Clients
             </div>
-            <div class="col-md-3 text-center h4">
+            {% comment %} <div class="col-md-3 text-center h4">
                 Client Requests
-            </div>
+            </div> {% endcomment %}
     </div>
 </div>
 
